--- a/Content/Site.css
+++ b/Content/Site.css
@@ -1,24 +1,202 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿@font-face {
+    font-family: galaxy;
+    src: url(../fonts/galaxy.ttf);
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+body {
+    background-color: #fedc9e;
+    margin: 0;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
+.header {
+    position: fixed;
+    top: 0;
+    display: inline-block;
+    background-color: #fcde5b;
+    height: 100px;
+    width: 100%;
+    box-shadow: 0 6px 10px rgba(0,0,0,0.5);
+    ;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+.header-content {
+    position: relative;
+    display: inline-block;
+    height: 44px;
+    width: 82%;
+    min-width: 760px;
+    margin-top: 26px;
+    margin-left: 9%;
+    margin-right: 9%;
+}
+
+.logo {
+    vertical-align: top;
+    display: inline-block;
+    width: 12%;
+    min-width: 145px;
+    height: 100%;
+    margin-right: 0.5%;
+}
+
+
+.logo-title {
+    margin-top: -12%;
+    color: white;
+    font-family: galaxy;
+    font-size: 5em;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #a37740;
+    width: 100%;
+    height: 100%;
+}
+
+
+.search-block {
+    vertical-align: top;
+    display: inline-block;
+    width: 58.6%;
+    height: 92%;
+    min-width: 400px;
+    background-color: #ffeea3;
+    margin-right: 0.5%;
+    border-radius: 10px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: rgba(128,86,55);
+}
+
+.button-main {
+    background: rgba(128,86,55);
+    box-shadow: 1px 1px 20px 0.5px #222 inset;
+    text-align: center;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+    .button-main:hover {
+        box-shadow: 1px 1px 10px 1px #222 inset;
+    }
+
+
+.search-field {
+    display: inline-block;
+    background: rgba(0, 0, 0, 0);
+    padding: 0.5%;
+    outline: none;
+    width: 89%;
+    height: 90%;
+    border-style: none;
+}
+
+.serch-button {
+    vertical-align: top;
+    display: inline-block;
+    width: 9%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0);
+    border-style: none;
+    outline: none;
+    padding: 0;
+    background-image: url(../img/search.png);
+    background-repeat: no-repeat;
+    background-position: 80% 50%;
+    cursor: pointer;
+}
+
+.bascet {
+    vertical-align: top;
+    display: inline-block;
+    width: 19%;
+    height: 100%;
+}
+
+
+
+.wriper {
+    width: 82%;
+    min-width: 760px;
+    margin-left: 9%;
+    margin-right: 9%;
+    min-height: 1000px;
+    margin-top: 110px;
+}
+
+
+.footer {
+    vertical-align: bottom;
+    display: inline-block;
+    background-color: #fcb15b;
+    height: 100px;
+    width: 100%;
+    box-shadow: 0 6px 10px rgba(0,0,0,0.5);
+    ;
+}
+
+.glass-case {
+    background: rgba(128,86,55);
+    width: 100%;
+    border-radius: 20px;
+    padding-bottom: 1%;
+}
+
+.goods {
+    display: inline-block;
+    height: 150px;
+    width: 96.5%;
+    margin-top: 10px;
+    margin-left: 1%;
+    margin-right: 1%;
+    background: rgba(250,226,120);
+    border-color: rgba(247, 197, 110);
+    border-width: 2px;
+    border-style: solid;
+    padding: 0.5%;
+}
+
+.goods-field {
+    background: rgba(251,235,166);
+    border-color: rgba(247, 197, 110);
+    border-width: 2px;
+    border-style: solid;
+    padding: 0.5%;
+}
+
+.goods-intro {
+    vertical-align: top;
+    display: inline-block;
+    width: 16%;
+    height: 92%;
+}
+
+.goods-info {
+    vertical-align: top;
+    height: 65%;
+    width: 100%;
+    display: inline-block;
+}
+
+.goods-price {
+    vertical-align: top;
+    display: inline-block;
+    width: 24%;
+    height: 22%;
+    margin-top: 0.5%;
+}
+
+.goods-seller {
+    vertical-align: top;
+    display: inline-block;
+    width: 50%;
+    height: 22%;
+    margin-top: 0.5%;
+    margin-left: 5%;
+}
+
+.goods-right {
+    vertical-align: top;
+    width: 80%;
+    height: 92%;
+    display: inline-block;
+    margin-left: 0.5%;
 }
