--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,18 +4,18 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Content/Site.css">
+    <link rel="stylesheet" href="~/Content/Site.css">
     <title>@ViewBag.Title - My ASP.NET Application</title>
 </head>
 <body>
     <div class="header">
         <div>
             <div class="header-content">
-                <div class="logo">
+                <a href="/Home/Index" class="logo">
                     <div class="logo-title">
                         Садар
                     </div>
-                </div>
+                </a>
                 <div class="search-block">
                     <input type="text" class="search-field" name="search" placeholder="Поиск по сайту">
                     <button class="serch-button" type="submit">
