id_seller -> sellerID

--- a/Views/Home/Goods.cshtml
+++ b/Views/Home/Goods.cshtml
@@ -19,7 +19,7 @@
                 Цена: @Model.price
             </div>
             <div class="goods-seller goods-field">
-                Продавец: @Model.id_seller
+                Продавец: @Model.sellerID
             </div>
         </div>
     </div>
