--- a/Content/Site.css
+++ b/Content/Site.css
@@ -3,9 +3,15 @@
     src: url(../fonts/galaxy.ttf);
 }
 
+html {
+    width: 100%;
+    height: 100%;
+}
 body {
     background-color: #fedc9e;
     margin: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .header {
@@ -16,7 +22,7 @@ body {
     height: 100px;
     width: 100%;
     box-shadow: 0 6px 10px rgba(0,0,0,0.5);
-    ;
+    z-index:10;
 }
 
 .header-content {
