--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,9 +18,10 @@
                 </a>
                 <div class="search-block">
                     <input type="text" class="search-field" name="search" placeholder="Поиск по сайту">
-                    <button class="serch-button" type="submit">
+                    <button class="serch-button" type="submit" >🔎</button>
                 </div>
                 <a class="button-main bascet">
+                    корзина
                 </a>
             </div>
         </div>
