--- a/Views/Auth/Index.cshtml
+++ b/Views/Auth/Index.cshtml
@@ -11,13 +11,13 @@
                 <div class="close">x</div>
             </div>
             <div class="login">
-                <div class="desc">
+                <div class="desc-auth">
                     <label>Номер телефона или e-mail</label>
                 </div>
                 <input class="textbox"  />
             </div>
             <div class="password">
-                <div class="desc">
+                <div class="desc-auth">
                     <label>Пароль</label>
                 </div>
                 <input class="textbox" />
