--- a/Content/Good.css
+++ b/Content/Good.css
@@ -1,1 +1,37 @@
-﻿
+﻿.content{
+    margin-top:130px;
+    display:block;
+}
+
+.image{
+    width:35%;
+    height:500px;
+    background-repeat:no-repeat;
+    background-size:100%;
+    display:inline-block;
+}
+.info{
+    display:inline-block;
+    width:60%;
+    vertical-align:top;
+    margin-left:30px;
+}
+.info .title{
+    font-size:250%;
+    padding-left:0;
+}
+.price{
+    font-size:300%;
+}
+.desc{
+    margin-top:15px;
+    font-size:150%;
+}
+.addToCartBtn{
+    width:300px;
+    height:50px;
+    margin:15px auto;
+    display:block;
+    font-size:150%;
+
+}
