--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,18 @@
 }
 
 <div class="prioritet">
-
+    <a class="porametr porametr-first">
+        наименование ▼
+    </a>
+    <a class="porametr">
+        стоймость –
+    </a>
+    <a class="porametr">
+        кол-во продаж –
+    </a>
+    <a class="porametr">
+        рейтинг продавца –
+    </a>
 </div>
 
 
@@ -29,9 +40,11 @@
                             @curent.short_discribe
                         </div>
                     </div>
+
                     <div class="goods-price goods-field" >
                         Цена: @curent.price Грн.
                     </div>
+
                     <div class="goods-seller goods-field">
                         Продавец: <a> @curent.seller.name </a>
                     </div>
