--- a/Content/Site.css
+++ b/Content/Site.css
@@ -24,6 +24,7 @@ a{
     text-decoration: underline;
     color: rgb(83, 39, 9);
     cursor: pointer;
+}
 
 .header {
     position: fixed;
@@ -170,6 +171,7 @@ a{
     min-width: 1000px;
     border-radius: 20px;
     padding-bottom: 1%;
+    margin: auto;
 }
 
 .goods {
@@ -249,7 +251,6 @@ a{
     margin-left: 0.5%;
 }
 
-
 .button-sell{
     vertical-align: top;
     margin-top: 0.75%;
@@ -260,10 +261,49 @@ a{
 
 .prioritet{
     background: rgba(128,86,55);
-    width: 100%;
-    max-width: 1850px;
-    min-width: 1000px;
+    max-width: 1080px;
+    min-width: 910px;
     height: 5%;
+    border-radius: 10px;
+    display: block;
 
-    border-radius: 20px;
+    margin: 10% auto;
+
+    margin-bottom: 1%;
+
+
+
+    padding-left: 10%;
+    padding-right: 10%;
+
+}
+
+.porametr{
+    display: inline-block;
+    color: rgba(251,235,166);
+    font-size: 120%;
+
+
+    margin-top: 0.1%;
+    margin-bottom:  0.1%;
+
+
+    text-decoration: none;
+    font-family: Vollkorn;
+    padding-right: 3.2%;
+    padding-left: 3.2%;
+    font-weight: normal;
+    
+    border-left-style: solid;
+    border-left-width: 1px;
+    border-color: rgba(251,235,166);
+}
+
+.porametr-first{
+    border-left-style: none;
+}
+
+
+.porametr:hover{
+    font-weight: bold;
 }
