--- a/Content/Good.css
+++ b/Content/Good.css
@@ -1,37 +1,51 @@
-﻿.content{
-    margin-top:130px;
-    display:block;
+﻿.content {
+    margin-top: 130px;
+    display: block;
 }
 
-.image{
-    width:35%;
-    height:500px;
-    background-repeat:no-repeat;
-    background-size:100%;
-    display:inline-block;
+.image {
+    width:550px;
+    height:400px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    display: inline-block;
+    border-radius: 10px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: rgba(128,86,55);
 }
-.info{
-    display:inline-block;
-    width:60%;
-    vertical-align:top;
-    margin-left:30px;
-}
-.info .title{
-    font-size:250%;
-    padding-left:0;
-}
-.price{
-    font-size:300%;
-}
-.desc{
-    margin-top:15px;
-    font-size:150%;
-}
-.addToCartBtn{
-    width:300px;
-    height:50px;
-    margin:15px auto;
-    display:block;
-    font-size:150%;
 
+.info {
+    border-radius: 10px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: rgba(128,86,55);
+    display: inline-block;
+    width: 50%;
+    vertical-align: top;
+    padding-left: 20px;
+    padding-right: 10px;
+    background-color: rgba(251,235,166);
+}
+
+    .info .title {
+        font-size: 250%;
+        padding-left: 0;
+    }
+
+.price {
+    font-size: 300%;
+}
+
+.desc {
+    margin-top: 15px;
+    font-size: 150%;
+}
+
+.addToCartBtn {
+    width: 300px;
+    height: 50px;
+    margin: 15px auto;
+    display: block;
+    font-size: 150%;
 }
