--- a/Content/Site.css
+++ b/Content/Site.css
@@ -144,12 +144,11 @@ a {
 
 
 .wriper {
-    width: 82%;
+    width: 94%;
     min-width: 760px;
-    margin-left: 9%;
-    margin-right: 9%;
     min-height: 1000px;
-    margin-top: 110px;
+    margin: 110px auto;
+    
 }
 
 
@@ -166,6 +165,7 @@ a {
 .glass-case {
     background: rgba(128,86,55);
     width: 100%;
+    margin:auto;
     max-width: 1850px;
     min-width: 1000px;
     border-radius: 20px;
