--- a/Content/Site.css
+++ b/Content/Site.css
@@ -82,11 +82,11 @@ a {
     border-radius: 10px;
     border-width: 2px;
     border-style: solid;
-    border-color: rgba(128,86,55);
+    border-color: rgb(128,86,55);
 }
 
 .button-main {
-    background: rgba(128,86,55);
+    background: rgb(128,86,55);
     box-shadow: 1px 1px 20px 0.5px #222 inset;
     text-align: center;
     border-radius: 5px;
@@ -127,11 +127,11 @@ a {
     cursor: pointer;
 
     font-size: 150%;
-    color: rgba(128,86,55);
+    color: rgb(128,86,55);
     
     border-left-style: solid;
     border-left-width: 2px;
-    border-color: rgba(128,86,55);
+    border-color: rgb(128,86,55);
 
 }
 
@@ -160,11 +160,10 @@ a {
     height: 100px;
     width: 100%;
     box-shadow: 0 6px 10px rgba(0,0,0,0.5);
-    ;
 }
 
 .glass-case {
-    background: rgba(128,86,55);
+    background: rgb(128,86,55);
     width: 100%;
     margin:auto;
     max-width: 1850px;
@@ -181,16 +180,16 @@ a {
     margin-top: 10px;
     margin-left: 1%;
     margin-right: 1%;
-    background: rgba(250,226,120);
-    border-color: rgba(247, 197, 110);
+    background: rgb(250,226,120);
+    border-color: rgb(247, 197, 110);
     border-width: 2px;
     border-style: solid;
     padding: 0.5%;
 }
 
 .goods-field {
-    background: rgba(251,235,166);
-    border-color: rgba(247, 197, 110);
+    background: rgb(251,235,166);
+    border-color: rgb(247, 197, 110);
     border-width: 2px;
     border-style: solid;
     padding: 0.5%;
@@ -260,7 +259,7 @@ a {
 }
 
 .prioritet{
-    background: rgba(128,86,55);
+    background: rgb(128,86,55);
     max-width: 1080px;
     min-width: 910px;
     height: 5%;
@@ -280,7 +279,7 @@ a {
 
 .porametr{
     display: inline-block;
-    color: rgba(251,235,166);
+    color: rgb(251,235,166);
     font-size: 120%;
 
 
@@ -296,7 +295,7 @@ a {
     
     border-left-style: solid;
     border-left-width: 1px;
-    border-color: rgba(251,235,166);
+    border-color: rgb(251,235,166);
 }
 
 .porametr-first{
