--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,7 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <!-- Подключаем Bootstrap CSS -->
+    <link rel="stylesheet" href="Content/bootstrap.min.css">
     <link rel="stylesheet" href="~/Content/Site.css">
     <link rel="stylesheet" href="~/Content/Auth.css">
     @RenderSection("links", false)
@@ -22,13 +23,17 @@
                 </a>
                 <div class="search-block">
                     <input type="text" class="search-field" name="search" placeholder="Поиск по сайту">
-                    <button class="serch-button" type="submit" >🔎</button>
+                    <button class="serch-button" type="submit">🔎</button>
                 </div>
                 <a class="button-main bascet">
                     корзина
                 </a>
             </div>
         </div>
+        <!-- Подключаем jQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <!-- Подключаем Bootstrap JS -->
+        <script src="~/Scripts/bootstrap.min.js"></script>
     </div>
 
     <div class="wriper">
