paging work norm (maybe)

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -64,9 +64,10 @@
             </div>
 
         }
-        <div class="btn-group">
-            @Html.PageLinks(Model.PageInfo, x => Url.Action("Index", new { page = x }))
-        </div>
+<div class="btn-group text-center">
+
+        @Html.PageLinks(Model.PageInfo, x => Url.Action("Index", new { page = x }))
+</div>
     }
 </div>
             
