--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -55,18 +55,21 @@
                         Продавец:<a> @curent.seller.name </a>
                     }
                     </div>
+                   
+                </div>
+                <div class="goods-buttons">
                     <a href="/Home/Goods/@curent.id" class="button-main button-sell">
-                        подробнее
+                        Подробнее
                     </a>
                     <!--создает форму, отправка которой добавляет список в корзину-->
                     @using (Html.BeginForm("AddToCart", "Cart"))
                     {
-                        @Html.HiddenFor(x => curent.id)
+                        @Html.Hidden("id", curent.id)
                         @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
-                        <input type="submit" class="btn btn-success" value="Добавить в корзину" />
-                        <a href="/Cart/AddToCart/@curent.id" class="button-main button-sell">
-                            В корзину
-                        </a>
+                        <input type="submit" class="button-main button-sell" value="В корзину">
+                        @*<a href="/Cart/AddToCart/?godId=@curent.id" class="button-main button-sell">
+                В корзину
+            </a>*@
                     }
                 </div>
 
