--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Подключаем Bootstrap CSS -->
-  <link rel="stylesheet" href="Content/bootstrap.min.css">
+  <link rel="stylesheet" href="~/Content/bootstrap.min.css">
     <link rel="stylesheet" href="~/Content/Site.css">
     <link rel="stylesheet" href="~/Content/Auth.css">
     @RenderSection("links", false)
@@ -17,9 +17,7 @@
         <div>
             <div class="header-content">
                 <a href="/Home/Index" class="logo">
-                    <div class="logo-title">
-                        Садар
-                    </div>
+                    <div class="logo-title">Садар</div>
                 </a>
                 <div class="search-block">
                     <input type="text" class="search-field" name="search" placeholder="Поиск по сайту">
