--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,8 +23,10 @@
                     <input type="text" class="search-field" name="search" placeholder="Поиск по сайту">
                     <button class="serch-button" type="submit">🔎</button>
                 </div>
-                <a class="button-main bascet">
-                    корзина
+
+            
+                <a class="button-main bascet" href="/Cart/Index">
+                    Корзина
                 </a>
             </div>
         </div>
