--- a/Views/Auth/Index.cshtml
+++ b/Views/Auth/Index.cshtml
@@ -3,24 +3,24 @@
 }
 <div class="pazmiv"></div>
     <div class="authWindow">
-        <form method="post">
+        <form method="post"  action= "/Auth/PrepareVereficationEmail" >
             <div class="authHeader">
                 <div class="title">
                     <label>Авторизация</label>
                 </div>
                 <div class="close">x</div>
             </div>
-            <div class="login">
+            <div class="login" >
                 <div class="desc-auth">
                     <label>Номер телефона или e-mail</label>
                 </div>
-                <input class="textbox"  />
+                <input name ="email" class="textbox"  />
             </div>
-            <div class="password">
+            <div class="password" >
                 <div class="desc-auth">
                     <label>Пароль</label>
                 </div>
-                <input class="textbox" />
+                <input name ="password" class="textbox" />
             </div>
             <div class="submitDiv">
                 <button type="submit" class="submitBtn">Войти</button>
