--- a/Content/Site.css
+++ b/Content/Site.css
@@ -130,11 +130,11 @@ a:any-link{
     cursor: pointer;
 
     font-size: 150%;
-    color: rgba(128,86,55);
+    color: rgb(128,86,55);
     
     border-left-style: solid;
     border-left-width: 2px;
-    border-color: rgba(128,86,55);
+    border-color: rgb(128,86,55);
 
 }
 
@@ -167,7 +167,7 @@ a:any-link{
 }
 
 .glass-case {
-    background: rgba(128,86,55);
+    background: rgb(128,86,55);
     width: 87%;
     margin:auto;
     min-width: 1000px;
@@ -181,16 +181,16 @@ a:any-link{
     height: 200px;
     margin: auto;
     margin:0 10px 10px 10px;
-    background: rgba(250,226,120);
-    border-color: rgba(247, 197, 110);
+    background: rgb(250,226,120);
+    border-color: rgb(247, 197, 110);
     border-width: 2px;
     border-style: solid;
     padding: 0.5%;
 }
 
 .goods-field {
-    background: rgba(251,235,166);
-    border-color: rgba(247, 197, 110);
+    background: rgb(251,235,166);
+    border-color: rgb(247, 197, 110);
     border-width: 2px;
     border-style: solid;
     padding: 0.5%;
@@ -264,8 +264,8 @@ a:any-link{
     margin-left: 0.5%;
 }
 
-.prioritet{
-    background: rgba(128,86,55);
+.sorting{
+    background: rgb(128,86,55);
     min-width: 1100px;
     height: 5%;
     border-radius: 10px;
@@ -282,9 +282,9 @@ a:any-link{
 
 }
 
-.porametr{
+.parametr{
     display: inline-block;
-    color: rgba(251,235,166);
+    color: rgb(251,235,166);
     font-size: 120%;
 
 
@@ -300,14 +300,14 @@ a:any-link{
     
     border-left-style: solid;
     border-left-width: 1px;
-    border-color: rgba(251,235,166);
+    border-color: rgb(251,235,166);
 }
 
-.porametr-first{
+.parametr-first{
     border-left-style: none;
 }
 
 
-.porametr:hover{
+.parametr:hover{
     font-weight: bold;
 }
