--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -73,7 +73,7 @@
 <div class="glass-case">
     @if (Model != null)
     {
-        foreach (goods curent in Model.Goods)
+        foreach (Good curent in Model.Goods)
         {
             <div class="goods">
 
