--- a/Views/Good/Index.cshtml
+++ b/Views/Good/Index.cshtml
@@ -11,7 +11,7 @@
 
 <div class="content">
     @{
-        string imgUrl = Url.Content("~/upload/" + Model.id + "/main.png");
+        string imgUrl = Url.Content("~/UploadFiles/" + Model.id + "/main.png");
     }
     <div class="image" style="background-image:url(@imgUrl)"></div>
     <div class="info">
