--- a/Content/Home.css
+++ b/Content/Home.css
@@ -1,21 +1,44 @@
 ﻿.categories {
     width: 25%;
     min-height: 500px;
+    cursor: pointer;
+    position: relative;
 }
 
 .category {
-    margin-top: 10px;
+    margin-bottom: 10px;
     height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5em;
-    color: #ffeea3;
+    position: relative;
+   
     background: rgb(128,86,55);
     border-radius: 3px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .7);
 }
+
+.category-link {
+    color: #ffeea3 !important;
+    font-size: 1.2em;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.category:hover  #submenu{
+    display:block;
+}
+
+#submenu {
+    position: absolute;
+    left: calc(100%);
+    padding-left:5px;
+    top: 0;
+    width:100%;
+    display:none;
+}
+
 .wriper {
     display: flex;
-    flex-flow:column;
+    flex-flow: column;
 }
