--- a/Views/Shared/ViewSeller.cshtml
+++ b/Views/Shared/ViewSeller.cshtml
@@ -27,7 +27,7 @@
                     <div class="logo-title">Садар</div>
                 </a>
 
-                <a class="seller-button">
+                <a href="/seller" class="seller-button">
                     ветрина
                 </a>
 
@@ -35,7 +35,7 @@
                     товары
                 </a>
 
-                <a class="seller-button">
+                <a href="/seller/orders" class="seller-button">
                     заказы
                 </a>
 
@@ -43,10 +43,13 @@
                     продажи
                 </a>
 
-                <a class="seller-button last-button">
+                <a class="seller-button ">
                     настройки
                 </a>
 
+                <a class="seller-button last-button">
+                    выход
+                </a>
 
             </div>
         </div>
