--- a/Content/Seller.css
+++ b/Content/Seller.css
@@ -51,18 +51,18 @@
 
 .wriper {
     background: #93b8a2;
-    padding: 1%;
+    padding: 2%;
 }
-
 
 .field {
     vertical-align: top;
-    display:inline-block;
+    display: inline-block;
     background: #2e7b50;
     border-color: #1c4f32;
     border-width: 2px;
     border-style: solid;
     padding: 0.5%;
+    color: #fae278;
 }
 
 .avatar {
@@ -77,6 +77,7 @@
 }
 
 .main-info {
+    vertical-align: top;
     display: inline-block;
     height: 54.5%;
     width: 50%;
@@ -85,10 +86,68 @@
 .name {
     display: block;
     height: 10%;
+    align-content: center;
+    font-size: 200%;
+    text-align: center;
 }
 
 .info {
     display: block;
     height: 83%;
     margin-top: 1%;
+}
+
+.reit {
+    vertical-align: top;
+    display: inline-block;
+    height: 54.5%;
+    width: 23%;
+}
+
+.star {
+    display: block;
+    height: 20%;
+    align-content:center;
+    align-items:center;
+}
+
+.star-count {
+    display: block;
+    height: 30%;
+    text-align: center;
+}
+
+.star-point-true {
+    width: 2em;
+    height: 2em;
+    margin: 1em 1em;
+    background: #02C986;
+    border-radius: 100% 0;
+}
+
+.star-point-false {
+    display: inline-block;
+    width: 2em;
+    height: 2em;
+    vertical-align: top;
+    background: #555;
+    border-radius: 100% 0;
+    margin: 0;
+}
+
+.star-point-true {
+    display: inline-block;
+    width: 2em;
+    height: 2em;
+    vertical-align: top;
+    background: #02C986;
+    border-radius: 100% 0;
+    margin: 0;
+}
+
+
+.contact {
+    display: block;
+    height: 75%;
+    margin-top: 2%;
 }
