--- a/Views/Shared/ViewSeller.cshtml
+++ b/Views/Shared/ViewSeller.cshtml
@@ -35,7 +35,7 @@
                     товары
                 </a>
 
-                <a href="/seller/orders" class="seller-button">
+                <a href="/Seller/Orders" class="seller-button">
                     заказы
                 </a>
 
@@ -43,11 +43,11 @@
                     продажи
                 </a>
 
-                <a class="seller-button ">
+                <a href="/seller/property" class="seller-button ">
                     настройки
                 </a>
 
-                <a class="seller-button last-button">
+                <a href="/Seller/Exit" class="seller-button last-button">
                     выход
                 </a>
 
