--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,19 +4,29 @@
 }
 @section links{
     <link rel="stylesheet" href="~/Content/Home.css">
-    <script type="text/javascript" src="~/Content/js/AppearMenu.js"></script>
 }
 
 
-<div class="categories" >
-        @{
-            foreach (Category category in Model.Categories.ToList())
-            {
-                <div id="dropdown-item" class="category">
-                    <a class="category-link" href="#">@category.name</a>
-                    @Html.Partial("SubMenu", category.subCategories)
-                </div>
-            }
+<div class="categories">
+    @{
+        foreach (Category category in Model.Categories.ToList())
+        {
+            <div id="dropdown-item" class="category">
+                <a class="category-link" href="@Url.Action("Index", "Catalog", new { categoryId = category.id })">@category.name</a>
+                @if (category.subCategories.Count != 0)
+                {
+                    <div id="submenu">
+                        @foreach (Category subCategory in category.subCategories)
+                        {
+                            <div class="category">
+                                <a class="category-link" href="@Url.Action("Index", "Catalog", new { categoryId = subCategory.id })">@subCategory.name</a>
+                            </div>
+                        }
+                    </div>
+                }
+
+            </div>
         }
+    }
 
 </div>
