--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </a>
 
             <div class="search-block">
-                <form method="get" style="height:40px">
+                <form method="get" style="height:40px" action="@Url.Action("Index", "Catalog")">
                     <input type="text" class="search-field" name="search" placeholder="Поиск по сайту" value="@RenderSection("search", false)">
                     <button class="serch-button" type="submit">🔎</button>
                 </form>
