--- a/Views/Seller/Property.cshtml
+++ b/Views/Seller/Property.cshtml
@@ -6,7 +6,7 @@
 
     <table border="2" align="center">
         <tr>
-            <td>ФИО</td><td>@Html.EditorFor(model => model.password)</td>
+            <td>ФИО</td><td></td>
         </tr>
 
         <tr>
