--- a/Views/Shared/ViewSeller.cshtml
+++ b/Views/Shared/ViewSeller.cshtml
@@ -47,13 +47,12 @@
                     настройки
                 </a>
 
-                <a href="/Seller/Exit" class="seller-button last-button">
+                <a href="/seller/exit" class="seller-button last-button">
                     выход
                 </a>
 
             </div>
         </div>
-
     </div>
 
     <div class="wriper">
