prepare to Olja's work

--- a/Views/Seller/Index.cshtml
+++ b/Views/Seller/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="field avatar">
-    <img class="photo" src="https://i.pinimg.com/236x/b4/32/42/b432428d9fc277024eb5918f19b8cf35.jpg" width="400" height="500" />
+    <img class="photo" src="https://i.pinimg.com/236x/b4/32/42/b432428d9fc277024eb5918f19b8cf35.jpg" />
 </div>
 
 <div class="main-info">
